--- a/Taller0.ipynb
+++ b/Taller0.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c8408b71",
+   "id": "b664c507",
    "metadata": {},
    "source": [
     "# Taller 0: Introducción a Python\n",
@@ -29,6 +29,7 @@
     "\n",
     "1. <a href=\"#quiz1\">Cadenas<a/>\n",
     "2. <a href=\"#quiz2\">Tuplas<a/>\n",
+    "3. <a href=\"#quiz3\">Listas<a/>\n",
     "\n",
     "\n",
     "---\n",
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22bca214",
+   "id": "c9872325",
    "metadata": {},
    "source": [
     " <h2 id=\"quiz1\">Exámen sobre Cadenas</h2>"
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6434b6ea",
+   "id": "3863b604",
    "metadata": {},
    "source": [
     "¿Cual es el valor de la variable <code>A</code> después de ejecutar el siguiente código?"
@@ -58,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9921fbb3",
+   "id": "9a160103",
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93e792d1",
+   "id": "572874c8",
    "metadata": {},
    "source": [
     "¿Cual es el valor de la variable <code>B</code> después de ejecutar el siguiente código?"
@@ -89,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "49b3d6d3",
+   "id": "336c4671",
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88261eec",
+   "id": "3d3d2b5b",
    "metadata": {},
    "source": [
     "¿Cual es el valor de la variable <code>C</code> después de ejecutar el siguiente código?"
@@ -120,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6b11832c",
+   "id": "90b05f53",
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27068aaa",
+   "id": "6e97f46e",
    "metadata": {},
    "source": [
     "En la variable <code>D</code> haz uso del slicing para imprimir solo los primeros tres elementos:"
@@ -151,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8f3f1c9b",
+   "id": "cf195ba5",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7b1c031",
+   "id": "f7652ae9",
    "metadata": {},
    "source": [
     "Usa un valor de stride de 2 para imprimir cada segundo elemento de la cadena <code>E</code>:"
@@ -183,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e2d19f25",
+   "id": "967a5289",
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d66fecf4",
+   "id": "f026c36b",
    "metadata": {},
    "source": [
     "Imprime una barra invertida:"
@@ -215,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b2eb0091",
+   "id": "b3b446b9",
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ec66f3c",
+   "id": "835ee30c",
    "metadata": {},
    "source": [
     "Convierte el mayúsculas el contenido de la variable <code>F</code>:"
@@ -245,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d54e7e19",
+   "id": "65bd977e",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8d8a261",
+   "id": "103b38e9",
    "metadata": {},
    "source": [
     "En la variable <code>G</code>, encuentra el primer índice de la sub-cadena <code>snow</code>:"
@@ -277,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "bb868d93",
+   "id": "bc0fed5d",
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +307,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0948a1cd",
+   "id": "fdd06c26",
    "metadata": {},
    "source": [
     "En la variable <code>G</code>, reemplaza la sub-cadena <code>Mary</code> con <code>Bob</code>:"
@@ -315,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c073377a",
+   "id": "d9f1b97a",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +337,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5773da95",
+   "id": "9b0eb2cf",
    "metadata": {},
    "source": [
     "<h2 id=\"quiz2\">Exámen sobre Tuplas</h2>"
@@ -344,7 +345,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7059fd0",
+   "id": "30f7fd85",
    "metadata": {},
    "source": [
     "Considérese la siguiente tupla:"
@@ -353,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "55a1dc2b",
+   "id": "85db2d00",
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +385,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84b461e5",
+   "id": "969456d6",
    "metadata": {},
    "source": [
     "Encontrar la longitud de la tupla, <code>genres_tuple</code>:"
@@ -393,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "2c104964",
+   "id": "5530d25a",
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +416,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3897e91",
+   "id": "ca3a7053",
    "metadata": {},
    "source": [
     "<img src=\"https://s3-api.us-geo.objectstorage.softlayer.net/cf-courses-data/CognitiveClass/PY0101EN/Chapter%202/Images/TuplesQuiz.png\" width=\"1100\" align=\"center\">"
@@ -423,7 +424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6469242",
+   "id": "7f0eb007",
    "metadata": {},
    "source": [
     "Accede al elemento en el índice 3:"
@@ -432,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "f5ac4b44",
+   "id": "bd8be7a6",
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +455,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6568c1e8",
+   "id": "a2b04649",
    "metadata": {},
    "source": [
     "Utiliza el slicing para obtener los índices 3, 4 y 5:"
@@ -463,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "3c332971",
+   "id": "dc853f60",
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +487,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6873393",
+   "id": "fc2bbf58",
    "metadata": {},
    "source": [
     "Encuentra los primeros dos elementos de la tupla <code>genres_tuple</code>:"
@@ -495,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "c2e049ff",
+   "id": "5045dd72",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +520,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14ff1a46",
+   "id": "09ffd616",
    "metadata": {},
    "source": [
     "Encuentra el primer índice de <code>\"disco\"</code>:"
@@ -528,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "b5048438",
+   "id": "00d9b742",
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +552,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b188311d",
+   "id": "de024940",
    "metadata": {},
    "source": [
     "Genera una lista ordenada desde la tupla <code>C_tuple=(-5, 1, -3)</code>:"
@@ -559,8 +560,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "f711e1d0",
+   "execution_count": null,
+   "id": "d97a39ae",
    "metadata": {},
    "outputs": [
     {
@@ -585,9 +586,141 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dcc8a0b8",
+   "metadata": {},
+   "source": [
+    "<h2 id=\"quiz\">Exámen sobre Listas</h2>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38de9d6c",
+   "metadata": {},
+   "source": [
+    "Crea una lista <code>a_lit</code> con los siguientes elementos <code>1</code>, <code>hello</code>, <code>[1,2,3]</code> y <code>True</code>."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "cd46a8a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 'hello', [1, 2, 3], True]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a_lit = [1,\"hello\",[1,2,3],True]\n",
+    "a_lit\n",
+    "# Para crear una lista es necesario usar '[]' y dentro de la lista puede existir cualquier tipo, por lo que solo si tiene\n",
+    "# que poner lo que nos pidieron."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33527bb3",
+   "metadata": {},
+   "source": [
+    "Encuentra el valor almacenado en el índice 1 de <code>a_list</code>."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "7fc5d22f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hello'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a_lit[1]\n",
+    "# Para indexar un valor solo tenemos que poner el numero dentro de los '[]' y como piden el 1 solo se pone ese numero"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "efd323ee",
+   "metadata": {},
+   "source": [
+    "Obtén el elemento almacenado en el índice 1, 2 y 3 de <code>a_list</code>."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "6cfb448a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['hello', [1, 2, 3], True]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a_lit[1:4]\n",
+    "# Para hacer un slice se usa el signo ':', y como nos piden los indices 1,2,3 se pone hasta el 4 ya que el ultimo valor lo ignora"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "932c3d74",
+   "metadata": {},
+   "source": [
+    "Concatena las siguientes listas <code>A = [1, 'a']</code> y <code>B = [2, 1, 'd']</code>:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2bee0c27",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 'a', 2, 1, 'd']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = [1, 'a']\n",
+    "B = [2, 1, 'd']\n",
+    "A+B\n",
+    "# Para concatenar una lista se usa el operador '+' ya que adiciona una lista con la otra y los elementos quedan en una sola lista"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "261978e1",
+   "id": "80cda8ec",
    "metadata": {},
    "outputs": [],
    "source": []
