Arregle unas cosas que se veian feas

--- a/Taller0.ipynb
+++ b/Taller0.ipynb
@@ -263,8 +263,8 @@
     "F = \"You are wrong\"\n",
     "upper= F.upper()\n",
     "print(upper)\n",
-    "# Para convertir una cadena en mayusculas se tiene que utilizar el metodo 'upper' , por lo que devolvera la variable en mayusculas\n",
-    "# y eso lo guardamos en una variable y lo imprimimos para ver el resultado "
+    "# Para convertir una cadena en mayusculas se tiene que utilizar el metodo 'upper' , por lo que devolvera la variable en \n",
+    "#mayusculas y eso lo guardamos en una variable y lo imprimimos para ver el resultado "
    ]
   },
   {
@@ -331,8 +331,8 @@
     "# Escribe abajo tu código y presiona Shift+Enter para ejecutarlo\n",
     "remplazo= G.replace('Mary','Bob')\n",
     "print(remplazo)\n",
-    "# Para realizar el cambio se usa el metodo replace, entonces en el primer parametro se tiene que poner la sub-cadena que se busca\n",
-    "# cambiar y en el segundo argumento se debe poner la cadena nueva , por lo que la respuesta queda asi."
+    "# Para realizar el cambio se usa el metodo replace, entonces en el primer parametro se tiene que poner la sub-cadena que \n",
+    "# se busca cambiar y en el segundo argumento se debe poner la cadena nueva , por lo que la respuesta queda asi."
    ]
   },
   {
@@ -514,8 +514,8 @@
     "# Escribe abajo tu código y presiona Shift+Enter para ejecutarlo\n",
     "genres_tuple[:2]\n",
     "# En este caso, genres_tuple[:2] devolverá una nueva tupla que contiene los elementos en los índices 0 y 1 de la tupla original. \n",
-    "# La salida será ('pop', 'rock'). En el slicing, el índice final no está incluido, por lo que [:2] selecciona los elementos desde el \n",
-    "# inicio hasta el índice 1."
+    "# La salida será ('pop', 'rock'). En el slicing, el índice final no está incluido, por lo que [:2] selecciona los elementos\n",
+    "# desde el  inicio hasta el índice 1."
    ]
   },
   {
@@ -682,7 +682,8 @@
    ],
    "source": [
     "a_lit[1:4]\n",
-    "# Para hacer un slice se usa el signo ':', y como nos piden los indices 1,2,3 se pone hasta el 4 ya que el ultimo valor lo ignora"
+    "# Para hacer un slice se usa el signo ':', y como nos piden los indices 1,2,3 se pone hasta el 4 ya que el ultimo valor \n",
+    "#lo ignora"
    ]
   },
   {
@@ -714,13 +715,14 @@
     "A = [1, 'a']\n",
     "B = [2, 1, 'd']\n",
     "A+B\n",
-    "# Para concatenar una lista se usa el operador '+' ya que adiciona una lista con la otra y los elementos quedan en una sola lista"
+    "# Para concatenar una lista se usa el operador '+' ya que adiciona una lista con la otra y los elementos quedan en \n",
+    "#una sola lista"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80cda8ec",
+   "id": "965f3e7f",
    "metadata": {},
    "outputs": [],
    "source": []
